--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-firestore-ktx:24.3.0'
     implementation 'com.google.firebase:firebase-auth:21.0.8'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation 'com.google.firebase:firebase-database:20.0.6'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
